<?xml version="1.0" encoding="utf-8"?>
<ScrollView

    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_gravity="center_horizontal"
    android:layout_marginStart="0dp"
    android:layout_marginLeft="0dp"
    android:layout_marginBottom="0dp"
    android:scrollbarAlwaysDrawHorizontalTrack="false"
    android:scrollbarAlwaysDrawVerticalTrack="true">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="start"
        android:layout_marginStart="0dp"
        android:layout_marginLeft="0dp"
        android:orientation="vertical">

        <Button
            android:id="@+id/third_law_motion_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="50dp"
            android:text="@string/third_law_topic" />

        <Button
            android:id="@+id/second_law_motion_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="50dp"
            android:text="@string/second_law_topic" />

        <Button
            android:id="@+id/work_and_energy_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="50dp"
            android:text="@string/work_and_energy_topic" />

        <Button
            android:id="@+id/projectile_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="50dp"
            android:text="@string/projectile_topic" />

        <Button
            android:id="@+id/two_dimensional_forces_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="50dp"
            android:text="@string/forces_2D_topic" />

        <Button
            android:id="@+id/first_law_motion_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="50dp"
            android:text="@string/first_law_topic" />
    </LinearLayout>

</ScrollView>

